--- a/index.html
+++ b/index.html
@@ -388,6 +388,24 @@
                            </div>
                        </div>
                    </a>
+                   <a href="https://www.linkedin.com/learning/certificates/423917b7b46145d784b09f62cca33cb95d1bd16a79d13f7094f0db84f3f17cb5?trk=share_certificate" target="_blank" rel="noopener noreferrer" class="block">
+                       <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
+                           <div class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">C</div>
+                           <div>
+                               <h3 class="font-bold text-gray-800">Introduction to Prompt Engineering for Generative AI</h3>
+                               <p class="text-sm text-gray-600">LinkedIn · Issued Jul 2025</p>
+                           </div>
+                       </div>
+                   </a>
+                   <a href="https://www.linkedin.com/learning/certificates/62a7d38064fccb960f33af392d2ce4e1ede08217bffa22bc1706ff796d6dcd58?trk=share_certificate" target="_blank" rel="noopener noreferrer" class="block">
+                       <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
+                           <div class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">C</div>
+                           <div>
+                               <h3 class="font-bold text-gray-800">What is Generative AI?</h3>
+                               <p class="text-sm text-gray-600">LinkedIn · Issued Jul 2025</p>
+                           </div>
+                       </div>
+                   </a>
                    <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                        <div class="text-3xl flex-shrink-0 w-10 h-10 flex items-center justify-center">🎓</div>
                        <div>
