--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">BigQuery for Data Analysis</h3>
                                 <p class="text-sm text-gray-600">Google Cloud Skills Boost · Jun 2022</p>
@@ -400,7 +400,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                Google</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Migrating Virtual Machines</h3>
                                 <p class="text-sm text-gray-600">Google Cloud Skills Boost · Jun 2022</p>
@@ -436,7 +436,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Getting Started with GKE</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued Mar 2022</p>
@@ -448,7 +448,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Securing & Integrating App...</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued Mar 2022</p>
@@ -460,7 +460,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                R</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Architecting with GKE</h3>
                                 <p class="text-sm text-gray-600">ROI Training · Issued Nov 2020</p>
@@ -472,7 +472,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Reliable GCP Infrastructure</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued May 2020</p>
@@ -484,7 +484,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Elastic GCP Infrastructure</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued Mar 2020</p>
@@ -496,7 +496,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Essential GCP Infrastructure</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued Mar 2020</p>
@@ -508,7 +508,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                G</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">GCP Fundamentals: Core Infra</h3>
                                 <p class="text-sm text-gray-600">Coursera · Issued May 2020</p>
@@ -520,7 +520,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                AI</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">Introduction to Prompt Engineering for Generative AI
                                 </h3>
@@ -533,7 +533,7 @@
                         <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                             <div
                                 class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
-                                C</div>
+                                AI</div>
                             <div>
                                 <h3 class="font-bold text-gray-800">What is Generative AI?</h3>
                                 <p class="text-sm text-gray-600">LinkedIn · Issued Jul 2025</p>
