--- a/index.html
+++ b/index.html
@@ -540,6 +540,18 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://lnkd.in/gtKPq8cF" target="_blank" rel="noopener noreferrer" class="block">
+                        <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
+                            <div
+                                class="w-10 h-10 flex-shrink-0 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 font-bold text-xl">
+                                AI</div>
+                            <div>
+                                <h3 class="font-bold text-gray-800">Responsible AI: Principles and Practical
+                                    Applications</h3>
+                                <p class="text-sm text-gray-600">LinkedIn · Issued Jul 2025</p>
+                            </div>
+                        </div>
+                    </a>
                     <div class="glass-card p-6 rounded-xl shadow-lg flex items-center space-x-4 h-full">
                         <div class="text-3xl flex-shrink-0 w-10 h-10 flex items-center justify-center">🎓</div>
                         <div>
