update firebase config

--- a/index.html
+++ b/index.html
@@ -742,8 +742,8 @@
 
     </script>
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.x.x/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.x.x/firebase-analytics.js";
+        import { initializeApp } from "firebase/app";
+        import { getAnalytics } from "firebase/analytics";
 
         const firebaseConfig = {
             apiKey: "AIzaSyDWjNdQtZi0Fl53Yl7AC88T5SwQYah3Dvg",
