--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
     </script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-analytics.js";
+        import { getAnalytics, logEvent } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-analytics.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyDWjNdQtZi0Fl53Yl7AC88T5SwQYah3Dvg",
@@ -760,7 +760,7 @@
             console.log("Firebase initialized successfully");
 
             // Log a test event
-            analytics.logEvent('page_view', {
+            logEvent(analytics, 'page_view', {
                 page_title: 'CV',
                 page_location: window.location.href
             });
