--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                             class="text-gray-700 hover:bg-white/50 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Certifications</a>
                         <a href="#eligibility"
                             class="text-gray-700 hover:bg-white/50 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Details</a>
+                        <a href="#projects"
+                            class="text-gray-700 hover:bg-white/50 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Projects</a>
                     </div>
                 </div>
             </div>
@@ -336,6 +338,39 @@
                                 checks.</li>
                         </ul>
                     </div>
+                </div>
+            </section>
+
+            <section id="projects" class="fade-in-section">
+                <h2 class="text-3xl font-bold text-gray-900 mb-8 text-center">Self Projects</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <a href="https://www.dailyexpenses.publicvm.com/" target="_blank" rel="noopener noreferrer"
+                        class="block">
+                        <div
+                            class="glass-card p-6 rounded-xl shadow-lg h-full hover:scale-105 transition-transform duration-300">
+                            <div class="flex items-center space-x-4 mb-4">
+                                <div
+                                    class="w-12 h-12 flex-shrink-0 flex items-center justify-center rounded-full bg-blue-100 text-blue-600">
+                                    <span class="text-2xl">💰</span>
+                                </div>
+                                <div>
+                                    <h3 class="font-bold text-gray-800 text-lg">Daily Expenses Tracker</h3>
+                                    <p class="text-sm text-gray-600">Personal Finance Management Tool</p>
+                                </div>
+                            </div>
+                            <p class="text-gray-700 text-sm">
+                                A web application for tracking daily expenses and managing personal finances.
+                                Built with modern web technologies and hosted on a public VM.
+                            </p>
+                            <div class="mt-4 flex flex-wrap gap-2">
+                                <span class="px-2 py-1 text-xs bg-blue-100 text-blue-700 rounded-full">Web App</span>
+                                <span class="px-2 py-1 text-xs bg-green-100 text-green-700 rounded-full">Full
+                                    Stack</span>
+                                <span class="px-2 py-1 text-xs bg-purple-100 text-purple-700 rounded-full">Cloud
+                                    Hosted</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </section>
 
