added project details

--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
                             </div>
                             <p class="text-gray-700 text-sm">
                                 A web application for tracking daily expenses and managing personal finances.
-                                Built with modern web technologies and hosted on a public VM.
+                                Built with modern web technologies and hosted on Git. This project used Gemini AI to
+                                extract receipt data and automatically categorize expenses.
+                                Data store is hosted on Google Cloud Firestore, ensuring high availability and
+                                scalability.
                             </p>
                             <div class="mt-4 flex flex-wrap gap-2">
                                 <span class="px-2 py-1 text-xs bg-blue-100 text-blue-700 rounded-full">Web App</span>
